--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -1,4 +1,26 @@
+/*!
 
+=========================================================
+* Material Dashboard 2 - v3.1.0
+=========================================================
+
+* Product Page: https://www.creative-tim.com/product/material-dashboard
+* Copyright 2023 Creative Tim (https://www.creative-tim.com)
+* Licensed under MIT (https://github.com/creativetimofficial/material-dashboard/blob/master/LICENSE.md)
+
+* Coded by www.creative-tim.com
+
+=========================================================
+
+* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+*/
+
+/*!
+   * Bootstrap  v5.2.3 (https://getbootstrap.com/)
+   * Copyright 2011-2022 The Bootstrap Authors
+   * Copyright 2011-2022 Twitter, Inc.
+   * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+   */
 :root {
   --bs-blue: #63B3ED;
   --bs-indigo: #596CFF;
@@ -185,7 +207,6 @@ h6,
   font-size: 1rem;
 }
 
-
 p {
   margin-top: 0;
   margin-bottom: 1rem;
@@ -202,7 +223,6 @@ address {
   font-style: normal;
   line-height: inherit;
 }
-
 
 ol,
 ul {
@@ -390,7 +410,6 @@ textarea {
   line-height: inherit;
 }
 
-
 button,
 select {
   text-transform: none;
@@ -434,58 +453,6 @@ button:not(:disabled),
 textarea {
   resize: vertical;
 }
-.dropdown-toggle { outline: 0; }
-
-.drop {
-  font-weight: 100 !important;
-  font-size: 0.875rem !important;
-  margin-right: 6px;
-  padding: var(--bs-nav-link-padding-x);
-}
-.drop:hover {
-  background: var(--bs-nav-link-hover-color) !important;
-}
-.btn-toggle {
-  display: inline-flex;
-  text-transform: none;
-  align-items: center;
-  padding: .25rem .5rem;
-  font-weight: 600;
-  color: rgba(0, 0, 0, .65);
-  background-color: transparent;
-  border: 0;
-}
-
-.btn-toggle[aria-expanded="true"] {
-  color: rgba(0, 0, 0, .85);
-}
-.btn-toggle[aria-expanded="true"]::before {
-  transform: rotate(90deg);
-}
-
-.btn-toggle-nav a {
-  display: block;
-  padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
-  font-size: var(--bs-nav-link-font-size);
-  font-weight: var(--bs-nav-link-font-weight);
-  color: var(--bs-nav-link-color);
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-}
-.btn-toggle-nav a:hover,
-.btn-toggle-nav a:focus {
-  color: var(--bs-nav-link-hover-color);
-}
-
-.nav-item .btn-info:not(.active) {
-  color: var(--bs-link-color) !important;
-}
-.scrollarea {
-  overflow-y: auto;
-}
-
-.fw-semibold { font-weight: 600; }
-.lh-tight { line-height: 1.25; }
-
 
 fieldset {
   min-width: 0;
@@ -2508,10 +2475,10 @@ progress {
 .table {
   --bs-table-color: #7b809a;
   --bs-table-bg: transparent;
-  --bs-table-border-color: rgb(131, 131, 131);
+  --bs-table-border-color: #f0f2f5;
   --bs-table-accent-bg: transparent;
   --bs-table-striped-color: #7b809a;
-  --bs-table-striped-bg: rgba(223, 223, 223, 0.781);
+  --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
   --bs-table-active-color: #7b809a;
   --bs-table-active-bg: rgba(0, 0, 0, 0.1);
   --bs-table-hover-color: #7b809a;
@@ -2567,13 +2534,13 @@ progress {
 }
 
 .table-striped>tbody>tr:nth-of-type(odd)>* {
-  background: var(--bs-table-striped-bg);
+  --bs-table-accent-bg: var(--bs-table-striped-bg);
   color: var(--bs-table-striped-color);
 }
 
 .table-striped-columns> :not(caption)>tr> :nth-child(even) {
-  --bs-table-accent-bg: var(--bs-table-striped-bg) !important;
-  color: var(--bs-table-striped-color) !important;
+  --bs-table-accent-bg: var(--bs-table-striped-bg);
+  color: var(--bs-table-striped-color);
 }
 
 .table-active {
@@ -2783,9 +2750,9 @@ progress {
   color: #495057;
   background-color: transparent;
   background-clip: padding-box;
-  border: 1px solid #d2d6da !important;
+  border: 1px solid #d2d6da;
   appearance: none;
-  border-radius: 0.375rem !important;
+  border-radius: 0.375rem;
   transition: 0.2s ease;
 }
 
@@ -2803,7 +2770,7 @@ progress {
   cursor: pointer;
 }
 
-.:focus {
+.form-control:focus {
   color: #495057;
   background-color: transparent;
   border-color: transparent;
@@ -3795,11 +3762,11 @@ fieldset:disabled .btn {
   --bs-btn-bg: #1A73E8;
   --bs-btn-border-color: #1A73E8;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #2fc5f3;
+  --bs-btn-hover-bg: #1662c5;
   --bs-btn-hover-border-color: #155cba;
   --bs-btn-focus-shadow-rgb: 60, 136, 235;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #2fc5f3;
+  --bs-btn-active-bg: #155cba;
   --bs-btn-active-border-color: #1456ae;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #fff;
@@ -5653,14 +5620,14 @@ fieldset:disabled .btn {
 }
 
 .pagination {
-  --bs-pagination-padding-x: 0.85rem;
+  --bs-pagination-padding-x: 0.75rem;
   --bs-pagination-padding-y: 0.375rem;
-  --bs-pagination-font-size: 0.85rem;
+  --bs-pagination-font-size: 1rem;
   --bs-pagination-color: #e91e63;
   --bs-pagination-bg: #fff;
   --bs-pagination-border-width: 1px;
   --bs-pagination-border-color: #dee2e6;
-  --bs-pagination-border-radius: 15px;
+  --bs-pagination-border-radius: 0.375rem;
   --bs-pagination-hover-color: #e91e63;
   --bs-pagination-hover-bg: #f0f2f5;
   --bs-pagination-hover-border-color: #dee2e6;
@@ -5682,7 +5649,7 @@ fieldset:disabled .btn {
   position: relative;
   display: block;
   padding: var(--bs-pagination-padding-y) var(--bs-pagination-padding-x);
-  font-size: var(--bs-pagination-font-size) !important;
+  font-size: var(--bs-pagination-font-size);
   color: var(--bs-pagination-color);
   background-color: var(--bs-pagination-bg);
   border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color);
@@ -5697,8 +5664,8 @@ fieldset:disabled .btn {
 
 .page-link:hover {
   z-index: 2;
-  color: var(--bs-pagination-hover-color) !important;
-  background-color: var(--bs-pagination-hover-bg) !important;
+  color: var(--bs-pagination-hover-color);
+  background-color: var(--bs-pagination-hover-bg);
   border-color: var(--bs-pagination-hover-border-color);
 }
 
@@ -20291,7 +20258,7 @@ fieldset:disabled .btn {
 
 @media (min-width: 1200px) {
   .fs-1 {
-    font-size: 4rem !important;
+    font-size: 3rem !important;
   }
 
   .fs-2 {
@@ -20799,8 +20766,8 @@ fieldset:disabled .btn {
 
 .btn-info:hover,
 .btn.bg-gradient-info:hover {
-  background-color: #2fc5f3;
-  border-color: #2fc5f3;
+  background-color: #1A73E8;
+  border-color: #1A73E8;
   box-shadow: 0 14px 26px -12px rgba(26, 115, 232, 0.4), 0 4px 23px 0 rgba(26, 115, 232, 0.15), 0 8px 10px -5px rgba(26, 115, 232, 0.2);
 }
 
@@ -20816,7 +20783,7 @@ fieldset:disabled .btn {
 .btn.bg-gradient-info:not(:disabled):not(.disabled):active,
 .show>.btn.bg-gradient-info.dropdown-toggle {
   color: color-yiq(#1A73E8);
-  background-color: #2fc5f3;
+  background-color: #1A73E8;
 }
 
 .btn-info.focus,
