--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5,10 +5,12 @@
 }
 
 .buttons-html5,
-.buttons-colvis {
+.buttons-colvis, .buttons-print {
     background-color: #4caf50 !important;
-    border-right: 1px solid rgb(250, 250, 250);
+    border-right: 1px solid rgb(250, 250, 250) !important;
+    border-radius: 5px !important;
     box-shadow: none;
+    color: white !important;
 }
 
 #tenantName {
