--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -7,8 +7,8 @@
 .buttons-html5,
 .buttons-colvis, .buttons-print {
     background-color: #4caf50 !important;
-    border-right: 1px solid rgb(250, 250, 250) !important;
-    border-radius: 5px !important;
+    border: none !important;
+    border-radius: 10px !important;
     box-shadow: none;
     color: white !important;
 }
